# xcontroller-app

./: .gitignore  GCODE_command_list.md  README.md  gcode-commands-list-archive.txt  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
.github/workflows/: build-and-release.yml  build-native-and-release.yml  build-web-and-release.yml  test-build-release.yml
src/: App.vue  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  serial.rs
src-tauri/src/printer_core/: commands.rs  mod.rs  parser.rs  serialcom.rs  structs.rs  upload.rs
src/3d-render/: 3dprinter.ts  gcode.ts
src/assets/: terminal_commands.ts
src/components/: connector.vue  files.vue  footer.vue  heatingprofile.vue  printerprofile.vue  status.vue
src/init/: client.ts  init.ts  printer.ts  startup.ts  storage.ts
src/locale/: de.json  en.json  fr.json  pt.json
src/transport/: ITransport.ts  UsbTransport.ts  WebSocketTransport.ts  index.ts
src/types/: messages.ts  printer.ts  storage.ts  upload.ts
src/utils/: SceneManager.ts  eventbus.ts  eventemitter.ts  gcode.ts  i18n.ts  init.ts  listeners.ts  printer.ts  storage.ts  upload.ts  wsconnector.ts
stitch_3d_printer_ui_redesign/industrial_cyberpunk/: DESIGN.md
stitch_3d_printer_ui_redesign/tactical_command_deck_redesign/: code.html
stitch_3d_printer_ui_redesign/tactical_gcode_viewer_redesign/: code.html
stitch_3d_printer_ui_redesign/tactical_temperature_management/: code.html
(+12 files in other folders)
