[package]
name = "xcontroller-app"
version = "0.3.1"
description = "3D printer controller program written in Rust and Typescript."
authors = ["J040M"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.1"
serialport = "4.9.0"
marlin-binary-transfer = { version = "0.1.2", default-features = false, features = ["blocking", "serial"] }
log = "0.4"
regex = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
# Opt-in heatshrink compression for SD-card uploads. Off by default; uploads
# use `compression: none`. Mirrors the xcontroller backend's feature flag.
heatshrink = ["marlin-binary-transfer/heatshrink"]
